# clustor

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  clippy.toml  fluxor.toml  lib_stub.rs
artifacts/: chunked_list_schema.json  feature_manifest.json  fixtures.clause_map.json  metrics_buckets.json  safety_kernel_manifest.json  system_log_catalog.json  wire_catalog.json
configs/: multi-2node-2p-snap.yaml  multi-2node-2p.yaml  multi-2node.yaml  multi-3node.yaml  single-cm5-throughput.yaml  single-minimal.yaml  single-throughput-buffered.yaml  single-throughput-pending1.yaml  single-throughput.yaml  single.yaml
crates/clustor-common/: Cargo.toml
crates/clustor-common/src/: lib.rs
docs/: architecture.md  consuming_fluxor.md  dependencies.md  management.md  net_http.md  overview.md  proposal_correlation.md  specification.md  substrate_sharing.md  test_catalog.md
docs/architecture/: compatibility.md  concepts.md  consumer_facade.md  errors.md  lifecycle.md  modules.md  observability.md  replication.md  security.md  wire.md
docs/checklists/: guarantee_verification.md
examples/mini-cluster/: .gitignore  Cargo.toml  README.md  cluster.yaml  spiff.sh
examples/mini-cluster/src/: cli.rs  config.rs  http_api.rs  main.rs  peers.rs  raft.rs  state.rs  storage.rs  tls.rs
examples/mini-cluster/state/node-b/: raft.idx
examples/mini-cluster/tests/: durability.rs
keys/: dev_release_automation_ed25519.sk
modules/: module.ld
modules/admin_handler/: mod.rs
modules/apply_pipeline/: manifest.toml  mod.rs
modules/client_codec/: manifest.toml  mod.rs
modules/commit_tracker/: manifest.toml  mod.rs
modules/common/: collections.rs  http_admin.rs  replica_facade.rs  types.rs  wire.rs  wire_channels.rs
modules/cp_bridge/: manifest.toml  mod.rs
modules/cp_proof_cache/: manifest.toml  mod.rs
modules/durability_ledger/: manifest.toml  mod.rs
modules/flow_controller/: manifest.toml  mod.rs
modules/fsync_scheduler/: manifest.toml  mod.rs
modules/http_surface/: manifest.toml  mod.rs
modules/key_manager/: manifest.toml  mod.rs
modules/peer_router/: manifest.toml  mod.rs
modules/placement_router/: manifest.toml  mod.rs
modules/raft_engine/: manifest.toml  mod.rs
modules/rbac/: manifest.toml  mod.rs
modules/read_gate/: manifest.toml  mod.rs
modules/replicator/: manifest.toml  mod.rs
modules/sdk/: collections.rs  http_admin.rs  replica_facade.rs  wire.rs
modules/snapshot_engine/: manifest.toml  mod.rs
modules/telemetry_agg/: manifest.toml  mod.rs
modules/throttle_gate/: manifest.toml  mod.rs
modules/wal/: mod.rs
src/: activation.rs  admin.rs  apply.rs  bootstrap.rs  consensus.rs  cp.rs  cp_raft.rs  durability.rs  error.rs  feature_guard.rs  flow.rs  follower.rs  internal.rs  lib.rs  overrides.rs  prelude.rs  profile.rs  raft.rs  read_index.rs  readyz.rs  security.rs  snapshot.rs  spec_fixtures.rs  storage.rs  system_log.rs  telemetry.rs  terminology.rs  timeouts.rs  transport.rs  why.rs  wire.rs
src/activation/: digest.rs  publisher.rs  state.rs
src/admin/: api.rs  guard.rs  mod.rs  workflows.rs
src/bootstrap/: boot_record.rs  filesystem.rs  pipeline.rs  probe.rs
src/consensus/: kernel.rs  log_store.rs  manifest.rs
src/control_plane/: mod.rs
src/cp/: breaker.rs  cache.rs  client.rs  guard.rs  mod.rs  strict.rs
src/durability/: ledger.rs  log.rs  recovery.rs
src/flow/: envelope.rs  mod.rs  pid.rs  profile.rs
src/lifecycle/: mod.rs
src/membership/: catch_up.rs  joint.rs  survivability.rs
src/net/: admin.rs  cp.rs  http.rs  mod.rs  peer_supervisor.rs  raft.rs  readyz.rs  tls.rs  why.rs
src/observability/: mod.rs  system_log.rs
src/persistence/: filesystem.rs  mod.rs
src/raft/: append.rs  election.rs  quorum.rs  rpc.rs  runtime_scaffold.rs  stickiness.rs
src/readyz/: mod.rs  overrides.rs  snapshot.rs
src/replication/: mod.rs
src/security/: break_glass.rs  certs.rs  errors.rs  mod.rs  mtls.rs  rbac.rs
src/snapshot/: manifest.rs  mod.rs  telemetry.rs
src/spec/: fixtures.rs  matrix.rs  mod.rs  self_test.rs
src/storage/: compaction.rs  crypto.rs  entry.rs  guard.rs  io.rs  layout.rs  replay.rs  segment.rs  wal.rs
src/transport/: heartbeat.rs  raft.rs
src/util/: config.rs  error.rs  mod.rs  retry.rs
tests/: activation_checkpoint.rs  admin_checkpoint.rs  admin_http_integration.rs  apply_checkpoint.rs  bootstrap_checkpoint.rs  bootstrap_pipeline_checkpoint.rs  control_plane.rs  cp_checkpoint.rs  explain_checkpoint.rs  flow_checkpoint.rs  lifecycle.rs  management_http_integration.rs  membership_checkpoint.rs  net.rs  net_raft_integration.rs  observability.rs  persistence.rs  profile_checkpoint.rs  raft_checkpoint.rs  read_path_checkpoint.rs  readyz_http.rs  recovery_checkpoint.rs  replication.rs  security.rs  security_checkpoint.rs  snapshot_checkpoint.rs  snapshot_read_checkpoint.rs  spec.rs  spec_ci_checkpoint.rs  spec_self_test_checkpoint.rs  storage_checkpoint.rs  storage_segment_header_forward.rs  telemetry_checkpoint.rs  transport_checkpoint.rs
tests/common/: http.rs  net.rs
tests/control_plane/: admin_audit_it.rs  admin_checkpoint.rs  admin_workflows_it.rs  capabilities_feature_guard_it.rs  capabilities_profile_it.rs  core_client_it.rs  core_coordinator_it.rs  core_placement_it.rs  core_read_index_it.rs  cp_checkpoint.rs  mod.rs  profile_checkpoint.rs
tests/fixtures/: appendix_c_manifest.json
tests/lifecycle/: activation_it.rs  bootstrap_checkpoint.rs  bootstrap_pipeline_checkpoint.rs  bootstrap_probe_it.rs  mod.rs
tests/net/: admin_http_integration.rs  control_plane_cp_client_it.rs  control_plane_why_schema_it.rs  http_deadline_it.rs  http_parser_fuzz.rs  http_parser_it.rs  management_http_integration.rs  management_http_it.rs  mod.rs  raft_integration.rs  readyz_http.rs
tests/observability/: explain_checkpoint.rs  mod.rs  readyz_overrides_it.rs  readyz_snapshot_it.rs  system_log_it.rs  telemetry_it.rs
tests/persistence/: durability_fence_it.rs  durability_ledger_it.rs  durability_log_it.rs  mod.rs  (+18 more)
tools/: audit.sh  check_async_runtime.sh  ci.sh  forbid_src_tests.sh  inventory.sh
(+218 files in other folders)
