[package]
name = "clustor"
version = "0.1.0"
edition = "2021"

[features]
default = []
full = ["net", "admin-http", "snapshot-crypto", "async-net"]
net = [
    "httparse",
    "rustls",
    "rustls-pemfile",
    "url",
    "x509-parser",
]
snapshot-crypto = []
admin-http = []
async-net = ["net", "tokio", "tokio-rustls"]
management = ["net", "admin-http"]
http-fuzz = ["net"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
rand = "0.10.0"
rand_chacha = "0.10.0"
crc32fast = "1.5.0"
sha2 = { version = "0.10.9", default-features = false, features = ["std"] }
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes", "std"] }
hmac = "0.12.1"
hex = "0.4.3"
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["rand_core", "std", "zeroize"] }
memmap2 = "0.9"
httparse = { version = "1.9.4", optional = true }
log = "0.4.28"
rustls = { version = "0.23.35", optional = true, default-features = false, features = ["tls12"] }
rustls-pemfile = { version = "2.2.0", optional = true }
url = { version = "2.5.8", optional = true }
x509-parser = { version = "0.17", default-features = false, optional = true }
zeroize = "1.8.2"
tokio = { version = "1.50.0", optional = true, features = ["rt", "rt-multi-thread", "time", "macros", "sync", "net", "io-util"] }
tokio-rustls = { version = "0.26.4", optional = true }
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.23.0"
rcgen = { version = "0.13", features = ["pem"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
