[package]
name = "mini-cluster"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = { version = "0.7.5", features = ["json"] }
clap = { version = "4.5.16", features = ["derive"] }
clustor = { path = "../../", features = ["net"] }
hyper-util = { version = "0.1.7", features = ["tokio"] }
parking_lot = "0.12.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
tokio = { version = "1.39.2", features = ["full"] }
tokio-rustls = "0.24.1"
log = "0.4"
env_logger = "0.11"
rand = "0.8"

[dev-dependencies]
tempfile = "3.12"
